# ilstrap

./: .gitignore  README.md  pyproject.toml  setup.py
src/ilstrap/: __init__.py  environment.py  installer.py  shared.py  windows.py
src/ilstrap/ida_strap/: ilstrapper.py  istrap_loader.py  istrap_plugin.py  istrapper.py
src/ilstrap/sys_scripts/: get_path.bat
