[tool.poetry]
name = "ilstrap"
version = "0.4.0"
description = "IDA Loader Installer"
readme = "README.md"
authors = ["KritantaDev <KritantaDevelopment@gmail.com>"]
homepage = "https://github.com/cynder/ilstrap"
repository = "https://github.com/cynder/ilstrap"
license = "MIT"

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]

packages = [
    { include = "ilstrap", from = "src" }
]

include = ['sys_scripts/*', 'ida_strap/*']

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ilstrap = "ilstrap.installer:main"